# cmake-skel

./: .gitignore  CMakeLists.txt  README.md  config.h.ini
include/: point.h
src/: main.cpp  point.cpp
